(chore) add 'Switchport template' block to the extension options page

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -55,6 +55,7 @@
     "tabs",
     "<all_urls>"
   ],
+  "options_page": "pages/options.html",
   "__firefox__options_ui": {
     "page": "pages/options.html"
   },
