--- a/app/manifest.json
+++ b/app/manifest.json
@@ -55,9 +55,10 @@
     "tabs",
     "<all_urls>"
   ],
-  "options_page": "pages/options.html",
+  "__chrome__options_page": "pages/options.html",
   "__firefox__options_ui": {
-    "page": "pages/options.html"
+    "page": "pages/options.html",
+    "open_in_tab": true
   },
   "commands": {
     "toggle-theme": {
