--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "less-plugin-glob": "^3.0.0",
     "npm": "^6.14.3",
     "npm-run-all": "^4.1.5",
+    "html-loader": "^1.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "^1.1.1",
     "webextension-toolbox": "latest"
