--- a/package.json
+++ b/package.json
@@ -16,19 +16,24 @@
     "@babel/preset-env": "^7.7.7",
     "css-loader": "^3.4.0",
     "cssnano": "^4.1.10",
+    "html-loader": "^1.0.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "less-plugin-glob": "^3.0.0",
     "npm": "^6.14.3",
     "npm-run-all": "^4.1.5",
-    "html-loader": "^1.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "sass": "^1.34.1",
+    "sass-loader": "^10.1.1",
     "style-loader": "^1.1.1",
-    "webextension-toolbox": "latest"
+    "webextension-toolbox": "latest",
+    "webpack": "^5.38.1"
   },
   "dependencies": {
     "@simonwep/pickr": "^1.6.0",
     "js-beautify": "^1.13.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "sortablejs": "^1.13.0",
+    "toaster-js": "^2.2.3"
   }
 }
