--- a/app/manifest.json
+++ b/app/manifest.json
@@ -50,7 +50,11 @@
       "all_frames": false
     }
   ],
-  "permissions": [
+  "__chrome__permissions": [
+    "activeTab",
+    "<all_urls>"
+  ],
+  "__firefox__permissions": [
     "activeTab",
     "storage",
     "<all_urls>"
