Revert "(chore) app/manifest.json: remove 'storage' permission for Chrome (Web Store review requirement)"
This reverts commit 4a86ba0adfc375932e8fe5f9c85463478205712f.

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -50,11 +50,7 @@
       "all_frames": false
     }
   ],
-  "__chrome__permissions": [
-    "activeTab",
-    "<all_urls>"
-  ],
-  "__firefox__permissions": [
+  "permissions": [
     "activeTab",
     "storage",
     "<all_urls>"
